# -----------------------------------------------------------------------------
# Project: epicsarchiver
# File: setup.cfg
# -----------------------------------------------------------------------------
# Purpose:
# This file is used to configure the packaging, and the distribution process 
# for the epicsarchiver project. It is used by setup tools like setuptools 
# and distutils.
#
# Copyright (C) 2024 GSECARS, The University of Chicago, USA
# This software is distributed under the terms of the MIT license.
# -----------------------------------------------------------------------------

[metadata]
name = epicsarchiver
version = 0.1.0
description = A python package for archiving EPICS PVs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyepics/epicsarchiver
project_urls =
    Bug Tracker = https://github.com/pyepics/epicsarchiver/issues
classifiers =
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =.
packages = find:
zip_safe = False
install_requires =
    fastapi>=0.105.0
    pydantic>=2.5.3
    sqlalchemy[asyncio]>=2.0.23
python_requires = >=3.11
